[gd_scene load_steps=2 format=3 uid="uid://c81jwtqqq7own"]

[ext_resource type="Script" path="res://scene/main.gd" id="1_2wk7u"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wk7u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPadding" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopPadding" type="HBoxContainer" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewTournamentButton" type="Button" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
text = "Create New Tournament"

[node name="LoadTournamentButton" type="Button" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
text = "Load From File"

[node name="BottomPadding" type="HBoxContainer" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPadding" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FileDialog" type="FileDialog" parent="."]
title = "Load Tournament Data"
initial_position = 5
size = Vector2i(800, 600)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
